objects/CRMforNonProfit__Pledge__c.object
<CustomObject>
    <fields>
        <fullName>CRMforNonProfit__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pledges</relationshipLabel>
        <relationshipName>Pledges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Bank_Account_Name__c</fullName>
        <label>Bank Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Pledges</relationshipLabel>
        <relationshipName>Pledges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Card_Type__c</fullName>
        <label>Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VISA</fullName>
                </value>
                <value>
                    <fullName>Maestro</fullName>
                </value>
                <value>
                    <fullName>MasterCard</fullName>
                </value>
                <value>
                    <fullName>VisaElectron</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Pledges</relationshipLabel>
        <relationshipName>Pledges</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Corporate_Donation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate Donation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Darujme_ID__c</fullName>
        <description>Identifikátor transakce v systému darujme.</description>
        <label>Darujme ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Darujme_cz_Custom_ID__c</fullName>
        <label>Darujme.cz Custom ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Darujme_cz_ID__c</fullName>
        <label>Darujme.cz ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Darujme_cz_Received_Date__c</fullName>
        <label>Darujme.cz Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Darujme_cz_Sent_Date__c</fullName>
        <label>Darujme.cz Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Darujme_cz_Status__c</fullName>
        <label>Darujme.cz Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Inbound_Account_Num__c</fullName>
        <label>Inbound Account Num.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Outbound_Account_Num__c</fullName>
        <label>Outbound Account Num.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Pledge_Amount__c</fullName>
        <label>Pledge Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Pledge_Comment__c</fullName>
        <label>Pledge Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Pledge_Date__c</fullName>
        <label>Pledge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Real_Amount__c</fullName>
        <label>Real Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Recurrent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recurrent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Source_Account_Number__c</fullName>
        <description>Z účtu číslo</description>
        <label>Source Account Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Specific_Symbol__c</fullName>
        <label>Specific Symbol</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Target_Account_Number__c</fullName>
        <description>Na účet číslo</description>
        <label>Target Account Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Transaction_Status__c</fullName>
        <label>Pledge Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Promised</fullName>
                </value>
                <value>
                    <fullName>Fulfilled</fullName>
                </value>
                <value>
                    <fullName>Ongoing</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>peněžní dar</fullName>
                </value>
                <value>
                    <fullName>nepeněžní dar</fullName>
                </value>
                <value>
                    <fullName>členský příspěvek</fullName>
                </value>
                <value>
                    <fullName>dotace/grant</fullName>
                </value>
                <value>
                    <fullName>protiplnění</fullName>
                </value>
                <value>
                    <fullName>ostatní</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One-Time</fullName>
                </value>
                <value>
                    <fullName>Regular</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Variable__c</fullName>
        <label>Variable</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__VyzvaId__c</fullName>
        <label>Darujme.cz Výzva Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Pledge</label>
    <listViews>
        <fullName>CRMforNonProfit__All</fullName>
        <columns>CRMforNonProfit__Campaign__c</columns>
        <columns>CRMforNonProfit__Contact__c</columns>
        <columns>CRMforNonProfit__Darujme_cz_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Pledge ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pledges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>